--- a/css/style.css
+++ b/css/style.css
@@ -621,6 +621,8 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 7em 0;
   clear: both;
 }
+.no-padding-top {padding-top: 0 !important;}
+
 @media screen and (max-width: 768px) {
   #fh5co-slider,
   #fh5co-about,
