--- a/sass/style.scss
+++ b/sass/style.scss
@@ -121,7 +121,7 @@ body {
 	width: 100%;
 	height: 100%;
 	@include transition(.5s);
-	.offcanvas & {
+	.offcanvas2 & {
 		overflow: hidden;	
 		position: absolute;
 		
@@ -1105,7 +1105,7 @@ input[type="text"] {
 
 
 // off canvas
-#fh5co-offcanvas {
+#fh5co-offcanvas2 {
 	position: absolute;
 	z-index: 1901;
 	width: 270px;
@@ -1122,7 +1122,7 @@ input[type="text"] {
 	@media screen and(max-width: $screen-sm){
 		display: block;
 	}
-	.offcanvas & {
+	.offcanvas2 & {
 		@include translateX(0px);
 	}
 	a {
@@ -1142,7 +1142,7 @@ input[type="text"] {
 				padding-left: 20px;
 				display: none;
 			}
-			&.offcanvas-has-dropdown {
+			&.offcanvas2-has-dropdown {
 				> a {
 					display: block;
 					position: relative;
