--- a/css/style.css
+++ b/css/style.css
@@ -434,14 +434,24 @@ h1, h2, h3, h4, h5, h6, figure {
   float: right;
   width: 78%;
 }
+#fh5co-features .feature-left .feature-copy.noicon {
+  float: right;
+}
+
 @media screen and (max-width: 768px) {
   #fh5co-features .feature-left .feature-copy {
     width: 84%;
+  }
+  #fh5co-features .feature-left .feature-copy.noicon {
+    width: 100%;
   }
 }
 @media screen and (max-width: 480px) {
   #fh5co-features .feature-left .feature-copy {
     width: 70%;
+  }
+  #fh5co-features .feature-left .feature-copy.noicon {
+    width: 100%;
   }
 }
 #fh5co-features .feature-left h3 {
