Remove text decoration navbar

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a:hover, a:active, a:focus {
 }
 
 .blog-text a { text-decoration: none;}
-
+#fh5co-offcanvas2 a { text-decoration: none;}
 p {
   margin-bottom: 30px;
 }
